# game_dev

./: CMakeLists.txt  readme  readme.md
assimp-4.1.0/: CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  revision.h
assimp-4.1.0/code/: Makefile  cmake_install.cmake
assimp-4.1.0/contrib/: Makefile  cmake_install.cmake
assimp-4.1.0/contrib/irrXML/: Makefile  cmake_install.cmake
assimp-4.1.0/contrib/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
assimp-4.1.0/lib/: libzlib.so.1
assimp-4.1.0/test/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
assimp-4.1.0/test/headercheck/: CTestTestfile.cmake  Makefile  cmake_install.cmake
assimp-4.1.0/tools/assimp_cmd/: Makefile  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
glfw-3.2.1/: CMakeCache.txt  GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.2.1/examples/: Makefile  cmake_install.cmake
glfw-3.2.1/src/: Makefile  cmake_install.cmake
glfw-3.2.1/tests/: Makefile  cmake_install.cmake
include/: HTTPRequest.h  camera.h  mesh.h  model.h  shader_s.h
resource/: 3.3.shader.fs.glsl  3.3.shader.vs.glsl  4.1.lighting_maps.fs  4.1.texture.fs.glsl  4.2.texture.fs.glsl  4.2.texture.fs1.glsl
resource/models/: COLLADA.dae  COLLADA_triangulate.dae  Capoeira.fbx
src/: Hello-Triangle.cpp  Hello-Triangle1.cpp  Hello-Triangle2.cpp  basic_lighting_diffuse.cpp  basic_lighting_specular.cpp  camera_circle.cpp  camera_class.cpp  color.cpp  coordinate_systems.cpp  coordinate_systems_multiple.cpp  httpTest.cpp  lighting_maps_diffuse.cpp  main.cpp  materials.cpp  model_loading.cpp  multiple_lights.cpp  shaders1.cpp  shaders2.cpp  shaders_class.cpp  shaders_interpolation.cpp  textures.cpp  textures_combined.cpp  textures_exercise4.cpp  transformations.cpp
